--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,8 @@ services:
       - key: PORT
         value: 10000
       - key: MONGODB_URI
-        value: YOUR_MONGODB_URI
+        value: mongodb+srv://qipguruijepgwony_db_user:jepgwony@cluster0.ue21svx.mongodb.net/?retryWrites=true&w=majority
       - key: REDIS_URL
-        value: YOUR_REDIS_URL
+        value: redis://default:POHokUIGlxgjAKIoZIP81oqtSQygsOHo@redis-12461.c61.us-east-1-3.ec2.cloud.redislabs.com:12461
       - key: PUBLIC_BASE_URL
-        value: https://social-hub.onrender.com
+        value: https://social-hub-1-brnh.onrender.com
