--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^2.0.2",
-    "socket.io": "^4.8.1",
-    "@aws-sdk/client-s3": "^3.400.0",
-    "@aws-sdk/lib-storage": "^3.400.0"
+    "socket.io": "^4.8.1"
   }
 }
