--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "firebase-admin": "^13.6.1",
     "helmet": "^8.0.0",
     "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
