--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "worker": "node worker/reelWorker.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.19.0",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.67.3",
     "cors": "^2.8.5",
