--- a/render.yaml
+++ b/render.yaml
@@ -15,3 +15,8 @@ services:
         value: redis://default:POHokUIGlxgjAKIoZIP81oqtSQygsOHo@redis-12461.c61.us-east-1-3.ec2.cloud.redislabs.com:12461
       - key: PUBLIC_BASE_URL
         value: https://social-hub-1-brnh.onrender.com
+      # Firebase Storage configuration - ADD THESE IN RENDER DASHBOARD
+      - key: FIREBASE_PROJECT_ID
+        value: social-hub-48bb8
+      - key: FIREBASE_CLIENT_EMAIL
+      - key: FIREBASE_PRIVATE_KEY
