--- a/render.yaml
+++ b/render.yaml
@@ -15,8 +15,17 @@ services:
         value: redis://default:POHokUIGlxgjAKIoZIP81oqtSQygsOHo@redis-12461.c61.us-east-1-3.ec2.cloud.redislabs.com:12461
       - key: PUBLIC_BASE_URL
         value: https://social-hub-1-brnh.onrender.com
-      # Firebase Storage configuration - ADD THESE IN RENDER DASHBOARD
+      - key: JWT_SECRET
+        value: any_random_string
+      # Firebase Storage - ADD THESE IN RENDER DASHBOARD
       - key: FIREBASE_PROJECT_ID
         value: social-hub-48bb8
       - key: FIREBASE_CLIENT_EMAIL
+        value: firebase-adminsdk@social-hub-48bb8.iam.gserviceaccount.com
       - key: FIREBASE_PRIVATE_KEY
+      # WebRTC TURN/STUN - ADD THESE IN RENDER DASHBOARD  
+      - key: STUN_URLS
+        value: stun:stun.l.google.com:19302
+      - key: TURN_URLS
+      - key: TURN_USERNAME
+      - key: TURN_CREDENTIAL
