--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/storage": "^7.19.0",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.67.3",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
