--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ CORS_ORIGIN=http://localhost:3000
 # SSL_CERT_PATH=/absolute/path/to/fullchain.pem
 # SSL_CA_PATH=/absolute/path/to/chain.pem
 
+# Cloudinary configuration (required for file uploads)
+# Get these from your Cloudinary dashboard at https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
 # TURN/STUN configuration for WebRTC clients
 STUN_URLS=stun:stun.l.google.com:19302
 TURN_URLS=turn:localhost:3478?transport=udp,turn:localhost:3478?transport=tcp
